--- a/games/dice-sim/index.css
+++ b/games/dice-sim/index.css
@@ -92,12 +92,12 @@ nav a.active {
 }
 
 .close {
-    background: url(/assets/back.svg);
+    background: url(../../assets/back.svg);
     background-repeat: no-repeat;
 }
 
 .open {
-    background: url(/assets/front.svg);
+    background: url(../../assets/front.svg);
     background-repeat: no-repeat;
 }
 
