Fix issue with incorrect links in CSS and JS files
Fix issue with incorrect links in CSS and JS files
Remove "yes/no" instructions in riddle/00-start

--- a/games/googol/index.css
+++ b/games/googol/index.css
@@ -92,12 +92,12 @@ nav a.active {
 }
 
 .close {
-    background: url(/assets/back.svg);
+    background: url(/legacy/assets/back.svg);
     background-repeat: no-repeat;
 }
 
 .open {
-    background: url(/assets/front.svg);
+    background: url(/legacy/assets/front.svg);
     background-repeat: no-repeat;
 }
 
